# ox_lib

./: CMakeLists.txt
beta_temp/: istream_range.cpp  istream_range.hpp
include/algorithms/: _heap.h  _helper_iterators.h  _iteration_algorithms.h  _string_algorithms.h
include/array/: _c_array.h
include/containers/: _2d_grid.h  _array_utils.h  _binary_tree.h  _c_array.h  _matrix.h  _multi_grid.h  _multi_infinite_grid.h
include/details/: range_format.h
include/functional/: _combinators.h  _utils.h
include/graph/: _dikstra.h
include/grid/: _2d_grid.h
include/hashs/: _pair_hash.h  _trivial_hash.h
include/io/: _file.h  _istream_container.h  _utils.h
include/math/: _modulo.h  _polygon.h  _rational.h  _simple_constexpr_math.h  _system_solver.h
include/multithreading/: atomic_iterator.h  joiner.h  threadpool.h  threadsafe_queue.h
include/ox/: X11Test.h  algorithms.h  array.h  bytes.h  canvas.h  colors.h  combinators.h  common.h  debug.h  file.h  formating.h  formatting.h  graph.h  grid.h  hash.h  infinite_grid.h  io.h  math.h  matrix.h  parser.h  polygon.h  ptr.h  ranges.h  std_abbreviation.h  terminal.h  threading.h  tree.h  triple.h  types.h  utils.h
include/ox/future/: generator.h  vector_format.h
include/parser/: _basic_parser.h
include/ranges/: _iterator_view.h  _possibly_owning.h  _repeat_view.h  _set_views.h  _views.h
include/types/: _endiable.h  _int_aliases.h
include/utils/: _bitset_container.h  _concepts.h  _triple.h
src/: X11Test.cpp  bytes.cpp  canvas.cpp  debug.cpp  file.cpp  system_solver.cpp  terminal.cpp
tests/: algorithm_test.cpp  algorithm_test.h  formating_test.cpp  main.cpp  threading_test.cpp  threading_test.h
